fix too narrow text

--- a/css/devdacerto.css
+++ b/css/devdacerto.css
@@ -47,6 +47,7 @@ body {
 }
 
 .content {
+  min-width: 430px;
   width: 60%;
   margin: 0 auto;
   color: black;
